v3.3.24 (XXXX-XX-XX)
--------------------

* Fixed parsing of ArangoDB config files with inlined comments. Previous versions didn't handle
  line comments properly if they were appended to an otherwise valid option value.
  
  For example, the comment in the line
  
      max-total-wal-size = 1024000 # 1M

  was not ignored and made part of the value. In the end, the value was interpreted as if
      
      max-total-wal-size = 10240001000000

  was specified.
  This version fixes the handling of comments in the config files so that they behave as intended.

* fixed a crash when posting an async request to the server using the "x-arango-async"
  request header and the server's request queue was full

* upgraded arangodb starter version to 0.14.4

* fix client id lookup table in agency

* fix agency issue in abort of cleanOutServer job

* fix agency issue with TTL discovered in 3.4.6


v3.3.23 (2019-04-14)
--------------------

* upgraded arangosync version to 0.6.3

* fixed internal issue #2946: create graph autocomplete was not working under
  certain circumstances.

* fixed a crash (SIGSEGV) when opening a RocksDB database directory that
  contained an empty (0 bytes filesize) journal file and encryption was in use.

* don't attempt to remove non-existing WAL files, because such attempt will
  trigger unnecessary error log messages in the RocksDB library

* always clear all ongoing replication transactions on the slave if the slave
  discovers the data it has asked for is not present anymore on the master and the
  `requireFromPresent` value for the applier is set to `false`.

  In this case aborting the ongoing transactions on the slave is necessary because
  they may have held exclusive locks on collections, which may otherwise not be
  released.

* speed up replication of transactions containing updates of existing documents.

  The replication protocol does not provide any information on whether a document